src/styles/styles.scss
$font-family: Arial, Helvetica, sans-serif;

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

/* Placeholder fix for IE*/ 
input.slds-input::-ms-input-placeholder { 
  color: rgb(172, 172, 172); 
}
/* Placeholder customization for Chrome*/ 
input::-webkit-input-placeholder {
  color: rgb(172, 172, 172); 
}
/* Placeholder customization for Firefox*/ 
input::-moz-placeholder {
  color: rgb(172, 172, 172); 
}

@mixin border-factor($width,$style,$color){

  border-width: $width;
  border-style: $style;
  border-color: $color;

}

@mixin font-factor ($size, $weight, $color){

  font-weight: $weight;
  font-size: $size;
  color: $color;
  font-family: $font-family;

}

.app-container {

  margin: 20px 20px;

}

.app-header-space {

  height: 10%

}

.widget-container {

  min-width: 250px;
  float: left;
  margin-top: 20px;
  @include border-factor(1px, solid, #369);

}

.section-header{

  padding: 5px 10px 5px 10px;
  h4 {
    @include font-factor(14px, '', #369);
  } 

}

.from-currency-group,
.to-currency-group {

  padding: 5px 10px 5px 10px;
  label {
    font-size: 13px;
  }
  .slds-form-element__control {
    padding-bottom: 3px;
    .fixed-input-width{
      width: 58%;
    }
    .slds-input.slds-is-disabled, .slds-input[disabled]{
      background-color: white !important;
    }

    .fixed-select-width{
      width: 40%;
      float: right;
      background-color: lightgray !important;
    }
  }
}

.alert-danger{

  color: red;
  max-width: 250px;
  padding: 10px;
  
}

.footnote {

  clear: left;
  padding: 5px 10px 5px 10px;

  .link-text{
    color: blue;
    float: right;
    text-decoration: underline;
    cursor: pointer;
  }

  .disclaimer{

    clear: both;
    display: block;
    padding-left: 3px;
    max-width: 250px;
  }

}

